# py-googletrans

./: .gitignore  .travis.yml  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-requirements.in  test-requirements.txt  tests.py  tox.ini  translate  translate.py  wercker.yml
.github/: stale.yml
.github/ISSUE_TEMPLATE/: report.yml
.github/workflows/: ci.yml  python-package.yml  python-publish.yml
.zed/: settings.json
aiogoogletrans/: __init__.py  client.py  constants.py  gtoken.py  models.py  urls.py  utils.py
docs/: Makefile  conf.py  googletrans.rst  index.rst  make.bat  modules.rst  tests.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_themes/solar/: NEWS.txt  README.rst  layout.html
docs/_themes/solar/static/: solar.css
example/: translate_word_doc.py
googletrans/: __init__.py  adapters.py  client.py  compat.py  constants.py  conversion.py  gtoken.py  models.py  response.py  translated.py  translator.py  urls.py  utils.py
pygoogletrans/: __init__.py  client.py  constants.py  gtoken.py  models.py  urls.py  utils.py
sample/: translate_word_doc.py
tests/: conftest.py  eng_to_om.py  test_client.py  test_gtoken.py  test_utils.py
